# MDM-SaaS

./: .gitignore  192.168.64.1-key.pem  192.168.64.1.pem  CLAUDE.md  Caddyfile  Dockerfile  MDM_SaaS_Demo.pptx  MDM_SaaS_Local_Deployment_Guide.docx  Makefile  README.md  TROUBLESHOOTING.md  alembic.ini  ca-trust.mobileconfig  connect.py  docker-compose.yml  env.example  gen_dev_certs.sh  main.py  profiles.py  pyproject.toml  seed_db.py  start.sh  test_commands.py  test_plist.py  test_profiles.py
.claude/: settings.json
.github/workflows/: deploy.yml
app/: main.py
app/api/routes/: admin_access.py  agent.py  audit.py  auth.py  billing.py  compliance.py  (+10 more)
app/core/: config.py  deps.py  limiter.py  mtls.py  security.py
app/db/: base.py  models.py
app/middleware/: logging.py
app/services/: audit.py  auto_revoke.py  command_queue.py  compliance.py  notifications.py  psso.py
certs/dev/: apns.key  apns.pem  apns_enc.key  apns_enc.pem  device_identity.p12  mdm_signing.key  mdm_signing.pem  mkcert_ca.key  mkcert_ca.pem  mkcert_ca.srl  windows_ca.key  windows_ca.pem
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/app/: layout.tsx
dashboard/lib/: api.ts
infra/terraform/: acm.tf  alb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  sqs.tf  terraform.tfvars  variables.tf  vpc.tf
scripts/: build_agent_pkg.sh  com.mdmsaas.agent.plist  entrypoint.sh  gen_arch_diagram.py  gen_deployment_doc.py  gen_pptx.py  localstack_init.sh  mdm_agent.py  mdm_agent.sh  remove_psso_profiles.py  seed_db.py  tf_bootstrap.sh  upload_secrets.sh
(+34 files in other folders)
